2009-11-08  Johnny Ding  <johnnyding.webkit@gmail.com>

Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=31224
        [V8] Return StyleSheet object instead of HTMLStyleElement w/document.styleSheets named property getter.

        * fast/dom/StyleSheet/get-stylesheet-byname-expected.txt: Added.
        * fast/dom/StyleSheet/get-stylesheet-byname.html: Added.
        * fast/dom/StyleSheet/script-tests: Added.
        * fast/dom/StyleSheet/script-tests/get-stylesheet-byname.js: Added.
2009-11-08  Johnny Ding  <johnnyding.webkit@gmail.com>

        Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=31224
        [V8] Return StyleSheet object instead of HTMLStyleElement w/document.styleSheets named property getter.

        Test: fast/dom/StyleSheet/get-stylesheet-byname.html

        * bindings/v8/custom/V8StyleSheetListCustom.cpp:
        (WebCore::NAMED_PROPERTY_GETTER):

Canonical link: https://commits.webkit.org/42067@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50637 268f45cc-cd09-0410-ab3c-d52691b4dbfc